force-app/main/default/objects/Usuarios_de_Pantallas__c/Usuarios_de_Pantallas__c.object-meta.xml
<CustomObject>
    <label>Usuarios de P. Afiliación</label>
    <nameField>
        <label>Nombres</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usuarios de P. Afiliación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>