force-app/main/default/objects/Usuarios_de_Pantallas__c/fields/Contrase_a__c.field-meta.xml
<CustomField>
    <fullName>Contrase_a__c</fullName>
    <label>Contraseña</label>
    <length>40</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>