force-app/main/default/objects/Usuarios_de_Pantallas__c/fields/Contrasena2__c.field-meta.xml
<CustomField>
    <fullName>Contrasena2__c</fullName>
    <label>Contrasena2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>