force-app/main/default/objects/Usuarios_de_Pantallas__c/fields/Perfil__c.field-meta.xml
<CustomField>
    <fullName>Perfil__c</fullName>
    <label>Perfil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SGS</fullName>
                <label>Sub Gerencia SAC</label>
            </value>
            <value>
                <fullName>OS</fullName>
                <label>Oficial SAC</label>
            </value>
            <value>
                <fullName>JC</fullName>
                <label>Jefatura Comercial</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Asesor Comercial</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Otro</label>
            </value>
            <value>
                <fullName>OP</fullName>
                <label>Operaciones</label>
            </value>
            <value>
                <fullName>SS</fullName>
                <label>Supervisor SAC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>