force-app/main/default/objects/Usuarios_de_Pantallas__c/fields/Usuario__c.field-meta.xml
<CustomField>
    <fullName>Usuario__c</fullName>
    <externalId>true</externalId>
    <label>Usuario</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>