force-app/main/default/objects/Usuarios_de_Pantallas__c/listViews/Usuarios.listView-meta.xml
<ListView>
    <fullName>Usuarios</fullName>
    <columns>NAME</columns>
    <columns>Usuario__c</columns>
    <filterScope>Everything</filterScope>
    <label>Usuarios</label>
</ListView>